k8s/base/http/ddev-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddev-proxy-ingress
  namespace: http
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ddev-proxy-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - ddev"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ddev.nicolatomassoni.it
      secretName: ddev-proxy-tls
  rules:
  - host: "ddev.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ddev-proxy-service
            port:
              number: 443
